--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,41 @@ body {
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     height: 95vh;
+    position: relative;
+}
+
+.logo-box {
+    left: 40px;
+    position: absolute;
+    top: 40px;
+}
+
+.logo {
+    height: 35px;
+}
+
+.text-box {
+    left: 50%;
+    position: absolute;
+    top: 40%;
+    transform: translate(-50%, -50%); 
+}
+
+.heading-primary {
+    color: #FFF;
+    text-transform: uppercase;
+}
+
+.heading-primary-main {
+    display: block;
+    font-size: 3.75rem;
+    font-weight: 400;
+    letter-spacing: 2.1875rem;
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 1.25rem;
+    font-weight: 700;
+    letter-spacing: 1.0875rem;
 }
