--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,26 @@ Dark green: #28b485
 */
 
 /* Perform a reset */
-* {
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 /* Basic font properties */
 body {
+    box-sizing: border-box;
     color: #777777;
     font-family: "Lato", sans-serif;
-    font-size: 16px;
     font-weight: 400;
     line-height: 1.7;
-    padding: 1.875rem;
+    padding: 3rem;
 }
 
 .header {
@@ -38,13 +44,13 @@ body {
 }
 
 .logo-box {
-    left: 40px;
+    left: 4rem;
     position: absolute;
-    top: 40px;
+    top: 4rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .text-box {
@@ -57,32 +63,32 @@ body {
 
 .heading-primary {
     color: #FFF;
-    margin-bottom: 3.75rem;
+    margin-bottom: 6rem;
     text-transform: uppercase;
 }
 
 .heading-primary-main {
     animation: moveInLeft 1s ease-out;
     display: block;
-    font-size: 3.75rem;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 2.1875rem;
+    letter-spacing: 3.5rem;
 }
 
 .heading-primary-sub {
     animation: moveInRight 1s ease-out;
     display: block;
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 1.0875rem;
+    letter-spacing: 1.8rem;
 }
 
 .btn:link,
 .btn:visited {
-    border-radius: 6.25rem;
+    border-radius: 10rem;
     color: #777;
     display: inline-block;
-    padding: 0.9375rem 2.5rem;
+    padding: 1.5rem 4.0rem;
     position: relative;
     text-decoration: none;
     text-transform: uppercase;
@@ -96,12 +102,12 @@ body {
 
 .btn:hover {
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    transform: translateY(-0.1875rem);
+    transform: translateY(-0.3rem);
 }
 
 .btn:active {
     box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-    transform: translateY(-0.0625rem)
+    transform: translateY(-0.1rem)
 }
 
 .btn-white {
@@ -110,7 +116,7 @@ body {
 }
 
 .btn::after {
-    border-radius: 6.25rem;
+    border-radius: 10rem;
     content: "";
     display: inline-block;
     height: 100%;
@@ -134,11 +140,11 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-6.25rem);
+        transform: translateX(-10rem);
     }
 
     80% {
-        transform: translateX(1.125rem);
+        transform: translateX(1.2rem);
     }
 
     100% {
@@ -150,9 +156,12 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(1.875rem);
+        transform: translateX(10rem);
     }
 
+    80% {
+        transform: translateX(-1.2rem)
+    }
     100% {
         opacity: 1;
         transform: translateX(0);
@@ -162,7 +171,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(6.25rem);
+        transform: translateY(2rem);
     }
 
     100% {
