--- a/css/style.css
+++ b/css/style.css
@@ -43,17 +43,17 @@ body {
     position: relative;
 }
 
-.logo-box {
+.header__logo-box {
     left: 4rem;
     position: absolute;
     top: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     left: 50%;
     position: absolute;
     text-align: center;
@@ -67,7 +67,7 @@ body {
     text-transform: uppercase;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     animation: moveInLeft 1s ease-out;
     display: block;
     font-size: 6rem;
@@ -75,7 +75,7 @@ body {
     letter-spacing: 3.5rem;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     animation: moveInRight 1s ease-out;
     display: block;
     font-size: 2rem;
@@ -88,6 +88,7 @@ body {
     border-radius: 10rem;
     color: #777;
     display: inline-block;
+    font-size: 1.6rem;
     padding: 1.5rem 4.0rem;
     position: relative;
     text-decoration: none;
@@ -95,7 +96,7 @@ body {
     transition: all .2s;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
 }
@@ -110,7 +111,7 @@ body {
     transform: translateY(-0.1rem)
 }
 
-.btn-white {
+.btn--white {
     background-color: #FFF;
     color: #777;
 }
@@ -128,7 +129,7 @@ body {
     z-index: -1;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: #FFF;
 }
 
