--- a/css/style.css
+++ b/css/style.css
@@ -25,43 +25,37 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   height: 95vh;
   position: relative; }
-
-.header__logo-box {
-  left: 4rem;
-  position: absolute;
-  top: 4rem; }
-
-.header__logo {
-  height: 3.5rem; }
-
-.header__text-box {
-  left: 50%;
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  transform: translate(-50%, -50%); }
+  .header__logo-box {
+    left: 4rem;
+    position: absolute;
+    top: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    left: 50%;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    transform: translate(-50%, -50%); }
 
 .heading-primary {
   color: #fff;
   margin-bottom: 6rem;
   text-transform: uppercase; }
+  .heading-primary--main {
+    animation: moveInLeft 1s ease-out;
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem; }
+  .heading-primary--sub {
+    animation: moveInRight 1s ease-out;
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.8rem; }
 
-.heading-primary--main {
-  animation: moveInLeft 1s ease-out;
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem; }
-
-.heading-primary--sub {
-  animation: moveInRight 1s ease-out;
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.8rem; }
-
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   border-radius: 10rem;
   color: #777;
   display: inline-block;
