--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,7 @@ body {
     line-height: 1.7;
     padding: 3rem;
 }
+
 .header {
     background-size: cover;
     background-image: linear-gradient(
@@ -38,101 +39,102 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     height: 95vh;
     position: relative;
-}
 
-.header__logo-box {
-    left: 4rem;
-    position: absolute;
-    top: 4rem;
-}
+    &__logo-box {
+        left: 4rem;
+        position: absolute;
+        top: 4rem;
+    }
 
-.header__logo {
-    height: 3.5rem;
-}
+    &__logo {
+        height: 3.5rem;
+    }
 
-.header__text-box {
-    left: 50%;
-    position: absolute;
-    text-align: center;
-    top: 40%;
-    transform: translate(-50%, -50%); 
+    &__text-box {
+        left: 50%;
+        position: absolute;
+        text-align: center;
+        top: 40%;
+        transform: translate(-50%, -50%); 
+    }
 }
 
 .heading-primary {
     color: $color-white;
     margin-bottom: 6rem;
     text-transform: uppercase;
-}
 
-.heading-primary--main {
-    animation: moveInLeft 1s ease-out;
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-}
+    &--main {
+        animation: moveInLeft 1s ease-out;
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+    }
 
-.heading-primary--sub {
-    animation: moveInRight 1s ease-out;
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.8rem;
+    &--sub {
+        animation: moveInRight 1s ease-out;
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.8rem;
+    }
 }
+.btn {
+    &:link,
+    &:visited {
+        border-radius: 10rem;
+        color: $color-grey-dark;
+        display: inline-block;
+        font-size: 1.6rem;
+        padding: 1.5rem 4.0rem;
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: all .2s;
+    }
 
-.btn:link,
-.btn:visited {
-    border-radius: 10rem;
-    color: $color-grey-dark;
-    display: inline-block;
-    font-size: 1.6rem;
-    padding: 1.5rem 4.0rem;
-    position: relative;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all .2s;
-}
+    &--animated {
+        animation: moveInBottom 0.5s ease-out 0.75s;
+        animation-fill-mode: backwards;
+    }
 
-.btn--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-}
-
-.btn:hover {
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    transform: translateY(-0.3rem);
-}
-
-.btn:active {
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-    transform: translateY(-0.1rem)
-}
-
-.btn--white {
-    background-color: $color-white;
-    color: #777;
-}
-
-.btn::after {
-    border-radius: 10rem;
-    content: "";
-    display: inline-block;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    transition: all 0.4s;
-    width: 100%;
-    z-index: -1;
-}
-
-.btn--white::after {
-    background-color: $color-white;
-}
-
-.btn:hover::after {
-    opacity: 0;
-    transform: scaleX(1.4) scaleY(1.6);
+    &:hover {
+        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+        transform: translateY(-0.3rem);
+    }
+    
+    &:active {
+        box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+        transform: translateY(-0.1rem)
+    }
+    
+    &--white {
+        background-color: $color-white;
+        color: #777;
+    }
+    
+    &::after {
+        border-radius: 10rem;
+        content: "";
+        display: inline-block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        transition: all 0.4s;
+        width: 100%;
+        z-index: -1;
+    }
+    
+    &--white::after {
+        background-color: $color-white;
+    }
+    
+    &:hover::after {
+        opacity: 0;
+        transform: scaleX(1.4) scaleY(1.6);
+    }
 }
 
 @keyframes moveInLeft {
