--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,6 +102,11 @@ body {
     &:hover {
         box-shadow: 0 10px 20px rgba(0,0,0,0.2);
         transform: translateY(-0.3rem);
+
+        &::after {
+            opacity: 0;
+            transform: scaleX(1.4) scaleY(1.6);
+        }
     }
     
     &:active {
@@ -112,6 +117,10 @@ body {
     &--white {
         background-color: $color-white;
         color: #777;
+
+        &::after {
+            background-color: $color-white;
+        }
     }
     
     &::after {
@@ -125,15 +134,6 @@ body {
         transition: all 0.4s;
         width: 100%;
         z-index: -1;
-    }
-    
-    &--white::after {
-        background-color: $color-white;
-    }
-    
-    &:hover::after {
-        opacity: 0;
-        transform: scaleX(1.4) scaleY(1.6);
     }
 }
 
