Implement 7-1 CSS architecture

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,181 +1,10 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-white: #fff;
-
-$color-grey-dark: #777;
-
-/* Perform a reset */
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-/* Basic font properties */
-body {
-    box-sizing: border-box;
-    color: $color-grey-dark;
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    padding: 3rem;
-}
-
-.header {
-    background-size: cover;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)),
-    url('../img/hero.jpg');
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    height: 95vh;
-    position: relative;
-
-    &__logo-box {
-        left: 4rem;
-        position: absolute;
-        top: 4rem;
-    }
-
-    &__logo {
-        height: 3.5rem;
-    }
-
-    &__text-box {
-        left: 50%;
-        position: absolute;
-        text-align: center;
-        top: 40%;
-        transform: translate(-50%, -50%); 
-    }
-}
-
-.heading-primary {
-    color: $color-white;
-    margin-bottom: 6rem;
-    text-transform: uppercase;
-
-    &--main {
-        animation: moveInLeft 1s ease-out;
-        display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 3.5rem;
-    }
-
-    &--sub {
-        animation: moveInRight 1s ease-out;
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.8rem;
-    }
-}
-.btn {
-    &:link,
-    &:visited {
-        border-radius: 10rem;
-        color: $color-grey-dark;
-        display: inline-block;
-        font-size: 1.6rem;
-        padding: 1.5rem 4.0rem;
-        position: relative;
-        text-decoration: none;
-        text-transform: uppercase;
-        transition: all .2s;
-    }
-
-    &--animated {
-        animation: moveInBottom 0.5s ease-out 0.75s;
-        animation-fill-mode: backwards;
-    }
-
-    &:hover {
-        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-        transform: translateY(-0.3rem);
-
-        &::after {
-            opacity: 0;
-            transform: scaleX(1.4) scaleY(1.6);
-        }
-    }
-    
-    &:active {
-        box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-        transform: translateY(-0.1rem)
-    }
-    
-    &--white {
-        background-color: $color-white;
-        color: #777;
-
-        &::after {
-            background-color: $color-white;
-        }
-    }
-    
-    &::after {
-        border-radius: 10rem;
-        content: "";
-        display: inline-block;
-        height: 100%;
-        left: 0;
-        position: absolute;
-        top: 0;
-        transition: all 0.4s;
-        width: 100%;
-        z-index: -1;
-    }
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        transform: translateX(1.2rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-
-    80% {
-        transform: translateX(-1.2rem)
-    }
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(2rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+@import "components/button";
+@import "layouts/header";
+@import "pages/home";
