--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1.2rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1.2rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
 /* Perform a reset */
 *,
 *::before,
@@ -7,36 +35,20 @@
   padding: 0; }
 
 html {
+  /* This defines the 1rem setting for the entire document.
+    Based on default 16px; */
   font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  padding: 3rem; }
 
 /* Basic font properties */
 body {
-  box-sizing: border-box;
   color: #777;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  line-height: 1.7;
-  padding: 3rem; }
-
-.header {
-  background-size: cover;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  height: 95vh;
-  position: relative; }
-  .header__logo-box {
-    left: 4rem;
-    position: absolute;
-    top: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    left: 50%;
-    position: absolute;
-    text-align: center;
-    top: 40%;
-    transform: translate(-50%, -50%); }
+  line-height: 1.7; }
 
 .heading-primary {
   color: #fff;
@@ -99,30 +111,22 @@ body {
   width: 100%;
   z-index: -1; }
 
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem); }
-  80% {
-    transform: translateX(1.2rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem); }
-  80% {
-    transform: translateX(-1.2rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(2rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
+.header {
+  background-size: cover;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  height: 95vh;
+  position: relative; }
+  .header__logo-box {
+    left: 4rem;
+    position: absolute;
+    top: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    left: 50%;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    transform: translate(-50%, -50%); }
