--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,36 @@ body {
   width: 100%;
   z-index: -1; }
 
+.row {
+  background-color: #eee;
+  margin: 0 auto;
+  max-width: 114rem;
+  /* An attribute selector, using syntax similar to regular expressions */
+  /* see https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors */ }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .row [class^="col-"] {
+    background-color: orangered;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem)/2); }
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem*2))/3); }
+  .row .col-2-of-3 {
+    width: calc( 2* ((100% - (6rem*2))/3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - (6rem*3))/4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - (6rem*3))/4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - (6rem*3))/4) + (6rem * 2)); }
+
 .header {
   background-size: cover;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
