--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,3 +4,8 @@ $color-primary-dark: #28b485;
 $color-white: #fff;
 
 $color-grey-dark: #777;
+
+//GRID
+$grid-width: 114rem;
+$gutter-horizontal: 6rem;
+$gutter-vertical: 8rem;
