--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,6 @@
 @import "base/typography";
 @import "base/utilities";
 @import "components/button";
+@import "layouts/grid";
 @import "layouts/header";
 @import "pages/home";
