--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,30 @@ body {
     font-weight: 700;
     letter-spacing: 1.8rem; }
 
+.heading-secondary {
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  color: transparent;
+  display: inline-block;
+  font-size: 3.5rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(2deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(34, 34, 34, 0.3); }
+
+/*
+A collection of simple classes that do just one thing
+*/
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
 .btn:link, .btn:visited {
   border-radius: 10rem;
   color: #777;
@@ -112,7 +136,6 @@ body {
   z-index: -1; }
 
 .row {
-  background-color: #eee;
   margin: 0 auto;
   max-width: 114rem;
   /* An attribute selector, using syntax similar to regular expressions */
@@ -124,7 +147,6 @@ body {
     content: "";
     display: table; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
@@ -160,3 +182,8 @@ body {
     text-align: center;
     top: 40%;
     transform: translate(-50%, -50%); }
+
+.section-about {
+  background-color: #f7f7f7;
+  margin-top: -20vh;
+  padding: 25rem 0 25rem; }
