--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,8 +2,10 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-white: #fff;
+$color-black: #222;
 
 $color-grey-dark: #777;
+$color-grey-light-1: #f7f7f7;
 
 //GRID
 $grid-width: 114rem;
