--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -27,3 +27,21 @@ body {
         letter-spacing: 1.8rem;
     }
 }
+
+.heading-secondary {
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    color: transparent;
+    display: inline-block;
+    font-size: 3.5rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(2deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, 0.3);
+    }
+}
