Style the left hand side of the about block

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
         border-radius: 10rem;
         color: $color-grey-dark;
         display: inline-block;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
         padding: 1.5rem 4.0rem;
         position: relative;
         text-decoration: none;
@@ -52,5 +52,30 @@
         transition: all 0.4s;
         width: 100%;
         z-index: -1;
+    }
+}
+
+.btn-text {
+    &:link,
+    &:visited {
+        border-bottom: 1px solid $color-primary;
+        color: $color-primary;
+        display: inline-block;
+        font-size: $default-font-size;
+        padding: 3px;
+        text-decoration: none;
+        transition: all .2s;
+    }
+
+    &:hover {
+        background-color: $color-primary;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+        color: $color-white;
+        transform: translateY(-0.3rem);
+    }
+
+    &:active {
+        box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
+        transform: translateY(0);
     }
 }
