--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,3 +11,6 @@ $color-grey-light-1: #f7f7f7;
 $grid-width: 114rem;
 $gutter-horizontal: 6rem;
 $gutter-vertical: 8rem;
+
+// Font sizes
+$default-font-size: 1.6rem;
