--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -45,3 +45,17 @@ body {
         text-shadow: .5rem 1rem 2rem rgba($color-black, 0.3);
     }
 }
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: 1.4rem;
+    
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
