--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -5,6 +5,14 @@ A collection of simple classes that do just one thing
     text-align: center;
 }
 
-.u-margin-bottom-8 {
+.u-margin-bottom-small {
+    margin-bottom: 1.5rem;
+}
+
+.u-margin-bottom-medium {
+    margin-bottom: 4rem;
+}
+
+.u-margin-bottom-big {
     margin-bottom: 8rem;
 }
