--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/typography";
 @import "base/utilities";
 @import "components/button";
+@import "components/composition";
 @import "layouts/grid";
 @import "layouts/header";
 @import "pages/home";
