Add the features section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/utilities";
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
 @import "layouts/grid";
 @import "layouts/header";
 @import "pages/home";
