--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,25 @@ A collection of simple classes that do just one thing
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(34, 34, 34, 0.15);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  transition: transform 0.3s; }
+  .feature-box__icon {
+    background: linear-gradient(to right, #7ed56f, #28b485);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    display: inline-block;
+    font-size: 6rem;
+    margin-bottom: 0.5rem; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 .row {
   margin: 0 auto;
   max-width: 114rem;
@@ -249,3 +268,12 @@ A collection of simple classes that do just one thing
   background-color: #f7f7f7;
   margin-top: -20vh;
   padding: 25rem 0 25rem; }
+
+.section-features {
+  background-size: cover;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  margin-top: -20vh;
+  padding: 20rem 0 20rem;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
