--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,36 @@ A collection of simple classes that do just one thing
   box-shadow: 0 0.5rem 1rem rgba(34, 34, 34, 0.15);
   transform: translateY(0); }
 
+.card {
+  display: block;
+  height: 50rem;
+  perspective: 150rem;
+  position: relative; }
+  .card__side {
+    backface-visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(34, 34, 34, 0.4);
+    font-size: 2rem;
+    height: 50rem;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transition: all .8s ease;
+    width: 100%; }
+    .card__side--back {
+      background-color: white;
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card__side--back-2 {
+        background: linear-gradient(to right bottom, #7ed56f, #28b485); }
+      .card__side--back-3 {
+        background: linear-gradient(to right bottom, #2998ff, #5643fa); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(360deg); }
+
 .composition {
   position: relative; }
   .composition__photo {
@@ -277,3 +307,8 @@ A collection of simple classes that do just one thing
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  margin-top: -20vh;
+  padding: 25rem 0 50rem; }
