--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,13 @@
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
 $color-white: #fff;
 $color-black: #222;
 
@@ -14,3 +21,6 @@ $gutter-vertical: 8rem;
 
 // Font sizes
 $default-font-size: 1.6rem;
+
+//Box shadows
+$box-shadow-1: 0 1.5rem 4rem rgba($color-black, 0.4);
