--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -3,7 +3,7 @@
 
     &__photo {
         border-radius: 2px;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+        box-shadow: $box-shadow-1;
         outline-offset: 2rem;
         position: absolute;
         transition: all 0.2s;
