--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,3 +19,9 @@
         transform: skewY(7deg);
     }
 }
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    margin-top: -20vh;
+    padding: 25rem 0 50rem;
+}
